--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.1",
     "@tailwindcss/forms": "^0.5.10",
-    "autoprefixer": "^10.4.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -21,7 +21,7 @@
     "react-dom": "18.2.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
