--- a/package.json
+++ b/package.json
@@ -1,38 +1,45 @@
 {
-  "name": "leaply-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-slot": "^1.0.1",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.17",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.333.0",
-    "next": "14.0.0",
-    "postcss": "^8.4.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sharp": "^0.34.5",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3",
-    "eslint": "8.43.0",
-    "eslint-config-next": "^14.0.0",
-    "typescript": "^5.2.0"
-  }
+	"name": "leaply-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "biome format --write .",
+		"format:check": "biome format .",
+		"lint": "biome lint --write .",
+		"lint:check": "biome lint .",
+		"check": "biome check --write .",
+		"check:ci": "biome check ."
+	},
+	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-slot": "^1.0.1",
+		"@radix-ui/react-tabs": "^1.1.13",
+		"@radix-ui/react-tooltip": "^1.2.8",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/postcss": "^4.1.17",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"framer-motion": "^12.23.24",
+		"lucide-react": "^0.333.0",
+		"next": "14.0.0",
+		"postcss": "^8.4.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"sharp": "^0.34.5",
+		"tailwind-merge": "^3.4.0",
+		"tailwindcss": "^4.1.17",
+		"zustand": "^5.0.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.3.6",
+		"@types/node": "^24.10.1",
+		"@types/react": "^19.2.6",
+		"@types/react-dom": "^19.2.3",
+		"eslint": "8.43.0",
+		"eslint-config-next": "^14.0.0",
+		"typescript": "^5.2.0"
+	}
 }
