--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/react-dom": "^19.2.3",
 		"eslint": "8.43.0",
 		"eslint-config-next": "^14.0.0",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.2.0"
 	}
 }
