--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"check:ci": "biome check ."
 	},
 	"dependencies": {
+		"@formatjs/intl-localematcher": "^0.6.2",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-scroll-area": "^1.2.10",
@@ -28,10 +29,12 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.23.25",
 		"lucide-react": "^0.556.0",
+		"negotiator": "^1.0.0",
 		"next": "16.0.7",
 		"postcss": "^8.4.0",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
+		"server-only": "^0.0.1",
 		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.17",
@@ -39,6 +42,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
+		"@types/negotiator": "^0.6.4",
 		"@types/node": "^24.10.1",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
