--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/postcss": "^4.1.17",
+		"@xyflow/react": "^12.10.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.23.25",
