--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/postcss": "^4.1.17",
+		"@types/d3-force": "^3.0.10",
 		"@xyflow/react": "^12.10.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"d3-force": "^3.0.0",
 		"framer-motion": "^12.23.25",
 		"lucide-react": "^0.556.0",
 		"negotiator": "^1.0.0",
