--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ dist/
 coverage/
 
 # Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -35,3 +36,7 @@ Thumbs.db
 # TypeScript
 *.tsbuildinfo
 
+# Local dev
+.vscode
+.agent
+.serena
