--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.8",
+		"@tailwindcss/typography": "^0.5.19",
 		"@types/js-cookie": "^3.0.6",
 		"@types/negotiator": "^0.6.4",
 		"@types/node": "^24.10.1",
