--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"d3-force": "^3.0.0",
+		"elkjs": "^0.11.0",
 		"framer-motion": "^12.23.25",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.556.0",
