--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.556.0",
 		"negotiator": "^1.0.0",
-		"next": "16.0.7",
+		"next": "^16.1.1",
 		"next-intl": "^4.6.1",
 		"postcss": "^8.4.0",
 		"react": "19.2.1",
