--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "framework": "nextjs",
-  "cleanUrls": true
+  "cleanUrls": true,
+  "installCommand": "npm install",
+  "outputDirectory": ".next"
 }
