--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
 		"lint": "biome lint --write .",
 		"lint:check": "biome lint .",
 		"check": "biome check --write .",
-		"check:ci": "biome check ."
+		"check:ci": "biome check .",
+		"knip": "knip"
 	},
 	"dependencies": {
-		"@formatjs/intl-localematcher": "^0.6.2",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
@@ -22,11 +22,9 @@
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
-		"@radix-ui/react-switch": "^1.2.6",
 		"@radix-ui/react-tabs": "^1.1.13",
 		"@radix-ui/react-toggle": "^1.1.10",
 		"@radix-ui/react-toggle-group": "^1.1.11",
-		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/postcss": "^4.1.17",
 		"@types/d3-force": "^3.0.10",
@@ -34,19 +32,15 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"d3-force": "^3.0.0",
-		"elkjs": "^0.11.0",
 		"framer-motion": "^12.23.25",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.556.0",
-		"negotiator": "^1.0.0",
 		"next": "^16.1.1",
 		"next-intl": "^4.6.1",
 		"postcss": "^8.4.0",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
 		"react-force-graph-2d": "^1.29.0",
-		"server-only": "^0.0.1",
-		"sharp": "^0.34.5",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.17",
 		"zustand": "^5.0.9"
@@ -55,14 +49,12 @@
 		"@biomejs/biome": "^2.3.8",
 		"@tailwindcss/typography": "^0.5.19",
 		"@types/js-cookie": "^3.0.6",
-		"@types/negotiator": "^0.6.4",
-		"@types/node": "^24.10.1",
+		"@types/node": "^25.0.3",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
-		"eslint": "9.39.1",
-		"eslint-config-next": "16.0.7",
+		"knip": "^5.80.0",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.2.0"
+		"typescript": "^5.9.3"
 	},
 	"overrides": {
 		"@types/react": "19.2.7",
