--- a/package.json
+++ b/package.json
@@ -36,23 +36,25 @@
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.556.0",
 		"next": "^16.1.1",
-		"next-intl": "^4.6.1",
+		"next-intl": "^4.7.0",
 		"postcss": "^8.4.0",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
 		"react-force-graph-2d": "^1.29.0",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "^4.1.17",
+		"tailwindcss": "^4.1.18",
+		"zod": "^4.3.5",
 		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.8",
+		"@biomejs/biome": "^2.3.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^25.0.3",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
 		"knip": "^5.80.0",
+		"shadcn": "^3.6.3",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
 	},
