--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,13 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"suspicious": {
+				"noArrayIndexKey": "warn"
+			},
+			"a11y": {
+				"useSemanticElements": "warn"
+			}
 		}
 	},
 	"javascript": {
