--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-toggle-group": "^1.1.11",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/postcss": "^4.1.17",
+		"@tanstack/react-query": "^5.90.16",
 		"@types/d3-force": "^3.0.10",
 		"@xyflow/react": "^12.10.0",
 		"class-variance-authority": "^0.7.1",
@@ -56,7 +57,8 @@
 		"knip": "^5.80.0",
 		"shadcn": "^3.6.3",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"@tanstack/react-query-devtools": "^5.91.2"
 	},
 	"overrides": {
 		"@types/react": "19.2.7",
