--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"d3-force": "^3.0.0",
-		"framer-motion": "^12.23.25",
+		"elkjs": "^0.11.0",
+		"framer-motion": "^12.23.26",
 		"js-cookie": "^3.0.5",
-		"lucide-react": "^0.556.0",
+		"lucide-react": "^0.562.0",
+		"negotiator": "^1.0.0",
 		"next": "^16.1.1",
 		"next-intl": "^4.7.0",
 		"postcss": "^8.4.0",
