--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
+		"dev": "bun generate:api && next dev",
+		"build": "bun generate:api && next build",
 		"start": "next start",
 		"format": "biome format --write .",
 		"format:check": "biome format .",
@@ -12,10 +12,11 @@
 		"lint:check": "biome lint .",
 		"check": "biome check --write .",
 		"check:ci": "biome check .",
-		"knip": "knip"
+		"knip": "knip",
+		"generate:api": "orval --config orval.config.ts",
+		"generate:api:watch": "orval --config orval.config.ts --watch"
 	},
 	"dependencies": {
-		"@faker-js/faker": "^10.2.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
@@ -35,11 +36,9 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"d3-force": "^3.0.0",
-		"elkjs": "^0.11.0",
 		"framer-motion": "^12.23.26",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.562.0",
-		"negotiator": "^1.0.0",
 		"next": "^16.1.1",
 		"next-intl": "^4.7.0",
 		"postcss": "^8.4.0",
@@ -54,15 +53,16 @@
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
 		"@tailwindcss/typography": "^0.5.19",
+		"@tanstack/react-query-devtools": "^5.91.2",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^25.0.3",
 		"@types/react": "19.2.7",
 		"@types/react-dom": "19.2.3",
 		"knip": "^5.80.0",
+		"orval": "^7.18.0",
 		"shadcn": "^3.6.3",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.9.3",
-		"@tanstack/react-query-devtools": "^5.91.2"
+		"typescript": "^5.9.3"
 	},
 	"overrides": {
 		"@types/react": "19.2.7",
