--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"react-force-graph-2d": "^1.29.0",
 		"tailwind-merge": "^3.4.0",
 		"tailwindcss": "^4.1.18",
+		"vaul": "^1.1.2",
 		"zod": "^4.3.5",
 		"zustand": "^5.0.9"
 	},
