fix(env): remove mock data totally

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-# API Configuration
+# Frontend Configuration
 NEXT_PUBLIC_API_URL=http://localhost:8080/api
-
-# Feature Flags
-# Set to "true" to use mock data instead of real API calls
-NEXT_PUBLIC_USE_MOCK_DATA=false
