--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 		"next-intl": "^4.7.0",
 		"next-themes": "^0.4.6",
 		"postcss": "^8.4.0",
-		"react": "19.2.1",
-		"react-dom": "19.2.1",
+		"react": "19.2.3",
+		"react-dom": "19.2.3",
 		"react-force-graph-2d": "^1.29.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
@@ -58,17 +58,13 @@
 		"@tanstack/react-query-devtools": "^5.91.2",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^25.0.3",
-		"@types/react": "19.2.7",
-		"@types/react-dom": "19.2.3",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
 		"knip": "^5.80.0",
 		"orval": "^7.18.0",
 		"shadcn": "^3.6.3",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3"
-	},
-	"overrides": {
-		"@types/react": "19.2.7",
-		"@types/react-dom": "19.2.3"
 	},
 	"trustedDependencies": [
 		"@parcel/watcher",
