--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "bun generate:api && next dev",
 		"build": "bun generate:api && next build",
+		"analyze": "next experimental-analyze",
 		"start": "next start",
 		"format": "biome format --write .",
 		"format:check": "biome format .",
@@ -13,7 +14,7 @@
 		"check": "biome check --write .",
 		"check:ci": "biome check .",
 		"knip": "knip",
-		"generate:api": "orval --config orval.config.ts",
+		"generate:api": "orval --config orval.config.mts",
 		"generate:api:watch": "orval --config orval.config.ts --watch"
 	},
 	"dependencies": {
@@ -54,6 +55,7 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
+		"@next/bundle-analyzer": "^16.1.2",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tanstack/react-query-devtools": "^5.91.2",
 		"@types/js-cookie": "^3.0.6",
