--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		".next/dev/types/**/*.ts"
+		".next/dev/types/**/*.ts",
+		"orval.config.mts"
 	],
 	"exclude": ["node_modules"]
 }
