--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"generate:api:watch": "orval --config orval.config.ts --watch"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
