--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-checkbox": "^1.3.3",
+		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
@@ -32,6 +33,11 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/postcss": "^4.1.17",
 		"@tanstack/react-query": "^5.90.16",
+		"@tiptap/extension-character-count": "^3.15.3",
+		"@tiptap/extension-placeholder": "^3.15.3",
+		"@tiptap/pm": "^3.15.3",
+		"@tiptap/react": "^3.15.3",
+		"@tiptap/starter-kit": "^3.15.3",
 		"@types/d3-force": "^3.0.10",
 		"@xyflow/react": "^12.10.0",
 		"class-variance-authority": "^0.7.1",
@@ -46,6 +52,7 @@
 		"postcss": "^8.4.0",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
+		"react-dropzone": "^14.3.8",
 		"react-force-graph-2d": "^1.29.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
