--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
 		"generate:api:watch": "orval --config orval.config.ts --watch"
 	},
 	"dependencies": {
+		"@base-ui/react": "^1.1.0",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-scroll-area": "^1.2.10",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.8",
@@ -71,6 +73,7 @@
 		"@types/node": "^25.0.3",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"agentation": "^1.3.2",
 		"knip": "^5.80.0",
 		"orval": "^8.0.0",
 		"shadcn": "^3.6.3",
